# wormhole

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
daemon/: pyproject.toml
daemon/tests/: conftest.py  test_cli.py  test_control.py  test_daemon.py  test_discovery.py  test_protocol.py  test_session.py  test_websocket.py
daemon/tests/fixtures/: assistant_message.json  result.json  system_init.json
daemon/wormhole/: __init__.py  __main__.py  cli.py  config.py  control.py  daemon.py  discovery.py  logging.py  permissions.py  persistence.py  platform.py  protocol.py  session.py  websocket.py
docs/: IOS_GUIDE.md  PRD.md
ios/: .gitignore  project.yml
ios/Wormhole/: AppState.swift  ContentView.swift  WormholeApp.swift
ios/Wormhole/Models/: Machine.swift  MachineConnection.swift  Protocol.swift  Session.swift
ios/Wormhole/Resources/: Info.plist
ios/Wormhole/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Wormhole/Services/: BonjourDiscoveryService.swift  WebSocketService.swift
ios/Wormhole/Views/: HomeView.swift  MachineListView.swift  MachinesSheet.swift  SessionDetailView.swift  SessionListView.swift  SessionRowView.swift
ios/WormholeTests/: ModelTests.swift  ProtocolTests.swift
