[project]
name = "wormhole"
version = "0.1.0"
description = "Remote Claude Code session manager"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0,<0.2.0",
    "websockets>=12.0,<13.0",
    "zeroconf>=0.131.0,<1.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=2.5.0,<3.0.0",
]

[project.scripts]
wormhole = "wormhole.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# Allow accessing protected members in tests
reportPrivateUsage = "none"
# Tests often have flexible typing
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
